# bigru-rknn

./: .gitignore  INTEGRATION.md  README.md  deep-research-report.md  requirements.txt
configs/: bigru_hierarchical.yaml  bigru_hierarchical_7fps.yaml  bigru_hierarchical_7fps_v2.yaml
pose_features/: CMakeLists.txt  README.md  feature_extractor_readme.txt  feature_extractor_summary.txt
pose_features/docs/: POSE_FEATURES_TECHNIQUES_TABLE.md
pose_features/include/: CsvPoseAdapter.h  CsvPoseCsvReader.h  PoseEstimator.h  PoseFeatures.h
pose_features/src/: CsvPoseAdapter.cpp  CsvPoseCsvReader.cpp  PoseFeatures.cpp  extract_pose_features_from_csv.cpp  test_pose_csv_features.cpp
rtmo/: .gitattributes  constant_folding.sh  convert_to_fp16.py  convert_to_fp16_all.py  convert_to_mixed.py  demo.sh  demo_batch.sh  onnx_to_engine-jetpack_4p6.py  onnx_to_engine-jetpack_5p1.py  rtmo-s.onnx  rtmo_demo.py  rtmo_demo_batch.py  rtmo_gpu.py  symbolic_shape_infer_all.sh
scripts/: convert_bigru_onnx_to_rknn.py  eval_videos.py  evaluate.py  export_bigru_onnx.py  extract_7fps_from_video.py  extract_features.py  kalman_upsample.py  kalman_video_pipeline.py  resample_keypoints.py  run_kalman_inference.py  run_realtime_kalman.py  train.py  visualize_pose_comparison.py  visualize_rtsp_kalman.py
src/: __init__.py  constants.py
src/data/: __init__.py  augment.py  dataset.py  postprocess.py  preprocess.py  windowing.py
src/evaluation/: __init__.py  metrics.py
src/inference/: __init__.py  fall_predictor.py  frame_buffer.py  kalman_pose_interpolator.py  pose_backend.py  pose_features.py  (+2 more)
test/: README.md  benchmark_onnx_vs_rknn.py  rtmo_s_oonx_infer.py  run_realtime.py
weights/: README.md
(+7 files in other folders)
